<?xml version="1.0"?>
<package>
  <name>ros_agv_base</name>
  <version>0.1.8</version>
  <description>The ros_agv_base package</description>

  <maintainer email="mihir.s456@gmail.com">Mihir</maintainer>

<license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>rosserial_python</build_depend>
  <build_depend>rosserial_server</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>rosserial_python</run_depend>
  <run_depend>rosserial_server</run_depend>



  <export>

  </export>
</package>
