<?xml version="1.0"?>
<package>
  <name>ros_agv_desc</name>
  <version>0.2.8</version>
  <description>This package provides a URDF model of the project</description>

  <maintainer email="mihir.s456@gmail.com">Mihir</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>


  </export>
</package>
