<?xml version="1.0"?>
<package>
  <name>ros_agv_simulation</name>
  <version>0.0.0</version>
  <description>The ros_agv_simulation package</description>

  <maintainer email="mihir.s456@gmail.com">Mihir</maintainer>


  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

  <export>

  </export>
</package>
