<?xml version="1.0"?>
<package>
  <name>grizzly_description</name>
  <version>0.3.2</version>
  <description>grizzly_description package to hold urdf and related model files</description>

  <maintainer email="yanma@clearpathrobotics.com">Yan Ma</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <!--ROS specific-->
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <!--URDF specific-->
  <run_depend>xacro</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>robot_state_publisher</run_depend>
</package>


